Nombre del sitio web establecido

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="normal-button-style menu-button">
                         <span class="material-symbols-outlined icon">menu</span>
                     </div>
-                    <h1 class="website-logo">To-Do-List</h1>
+                    <h1 class="website-logo">TaskBoost</h1>
                     <div class="header-first-buttons">
                         <div class="special-button-style tasks-button">
                             <span class="tasks-button-text" data-section="header" data-value="task-button">Tareas</span>
