--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>To Do List</title>
+        <title>TaskBoost</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css" type="text/css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -110,7 +110,7 @@
                         <div class="normal-button-style close-menu-button">
                             <span class="material-symbols-outlined">close</span>
                         </div>
-                        <h1 class="website-logo side-menu-logo">To-Do-List</h1>
+                        <h1 class="website-logo side-menu-logo">TaskBoost</h1>
                     </div>
                     <div class="side-menu-content">
                         <div class="dropdown-menu-option dropdown-menu-option-profile">
